--- a/server/public/main.css
+++ b/server/public/main.css
@@ -3,3 +3,24 @@ body {
   color: #0a1520;
   font-family: 'Poppins', sans-serif;
 }
+
+
+  .balloon-container {
+    display: inline-block;
+  }
+  
+  .balloon {
+    
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid black;
+  }
+  .popped-balloon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color:  #faf8f1;
+    border: 0px
+  }
+
