--- a/server/public/main.css
+++ b/server/public/main.css
@@ -15,6 +15,9 @@ body {
 
   width: 50px;
   height: 50px;
+  padding: 20px;
+  margin: 20px;
+  height: 50px;
   border-radius: 50%;
   border: 1px solid black;
 }
