balloons do not function

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -11,16 +11,67 @@ body {
   display: inline-block;
 }
 
+
+
 .balloon {
 
   width: 50px;
   height: 50px;
   padding: 20px;
   margin: 20px;
-  height: 50px;
   border-radius: 50%;
   border: 1px solid black;
+
+  background-size: contain;
+  position: absolute;
+  bottom: 0%;
+  animation: move_y 50s forwards, oscil1 6s infinite;
+  left: 45%;
 }
+
+
+@keyframes move_y {
+  from {
+    bottom: -10%;
+    /* left: 50% */
+  }
+
+  to {
+    bottom: 100%;
+  }
+}
+
+@keyframes oscil1 {
+  from {
+    translate: 0 0;
+    transform: rotate(0deg);
+    animation-timing-function: cubic-bezier(0.9, 0.39, 0.9, 1);
+  }
+
+  25% {
+    translate: 10px 0;
+    transform: rotate(3deg);
+    animation-timing-function: cubic-bezier(0.7, 0.0, 0.9, 0.7);
+  }
+
+  50% {
+    translate: 0 0;
+    transform: rotate(0deg);
+    animation-timing-function: cubic-bezier(0.1, 0.3, 0.3, 1);
+  }
+
+  75% {
+    translate: -10px 0;
+    transform: rotate(-3deg);
+    animation-timing-function: cubic-bezier(0.7, 0.0, 0.9, 0.7);
+  }
+
+  to {
+    translate: 0 0;
+    transform: rotate(0deg);
+  }
+}
+
 
 .popped-balloon {
   width: 50px;
