--- a/server/public/main.css
+++ b/server/public/main.css
@@ -34,7 +34,7 @@ body {
   padding: 20px;
   margin: 20px;
   border-radius: 50%;
-  background-color: #14dc06;
+  background-color: #faf8f1;
 }
 
 
@@ -97,7 +97,7 @@ body {
 
 .instructions {
 
-  height: 50px;
+  height: 100px;
   width: 500px;
   border: 2px solid black;
   border-radius: 15px;
